--- a/thesis/sections/risc-v.tex
+++ b/thesis/sections/risc-v.tex
@@ -234,6 +234,7 @@ However, as we will focus on secure embedded systems, we will leave out many par
 Supervisor-mode will be handled wherever it fits in the bigger picture but not on its own.
 
 \subsubsection{Exceptions, traps and interrupts}
+\label{sec:rv-exn}
 
 Volume 1 of the specification introduces the concept of exceptions, traps and interrupts as follows:
 \begin{displaycquote}{RiscVISA}
