--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -12,6 +12,7 @@
 \usepackage{subcaption}
 \usepackage{multirow}
 \usepackage{multicol}
+\usepackage{bussproofs}
 \usetikzlibrary{positioning,calc,graphs}
 
 \setlength{\grammarindent}{8em}
@@ -21,6 +22,7 @@
 \usepackage{courier}
 
 \newcommand{\muZ}{{\textmu}Z}
+\newcommand{\ite}[3]{\ensuremath{\texttt{if} \; #1 \; #2 \; #3}}
 
 \setlist[description]{leftmargin=\parindent,labelindent=\parindent}
 
