--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -23,6 +23,7 @@
 
 \newcommand{\muZ}{{\textmu}Z}
 \newcommand{\ite}[3]{\ensuremath{\texttt{if} \; #1 \; #2 \; #3}}
+\newcommand{\W}{\ensuremath{\mathcal{W}}}
 
 \setlist[description]{leftmargin=\parindent,labelindent=\parindent}
 
