thesis: Add subsection about information flow tracking

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -24,6 +24,11 @@
 \newcommand{\muZ}{{\textmu}Z}
 \newcommand{\ite}[3]{\ensuremath{\texttt{if} \; #1 \; #2 \; #3}}
 \newcommand{\W}{\ensuremath{\mathcal{W}}}
+\newcommand{\I}{\ensuremath{\mathcal{I}}}
+\newcommand{\PT}{\text{PT}}
+\newcommand{\PU}{\text{PU}}
+\newcommand{\CT}{\text{CT}}
+\newcommand{\CU}{\text{CU}}
 
 \setlist[description]{leftmargin=\parindent,labelindent=\parindent}
 
@@ -57,6 +62,7 @@
 \newacronym{alu}{ALU}{arithmetic logic unit}
 \newacronym{pma}{PMA}{phsyical memory attribute}
 \newacronym{pmp}{PMP}{physical memory protection}
+\newacronym{hdl}{HDL}{hardware description language}
 
 \newacronym{jal}{JAL}{jump and link}
 \newacronym{jalr}{JALR}{jump and link register}
