--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -29,6 +29,11 @@
 \newcommand{\PU}{\text{PU}}
 \newcommand{\CT}{\text{CT}}
 \newcommand{\CU}{\text{CU}}
+\renewcommand{\P}{\text{P}}
+\newcommand{\C}{\text{C}}
+\newcommand{\T}{\text{T}}
+\newcommand{\U}{\text{U}}
+\newcommand{\binSigma}{\ensuremath{\Sigma_{01}}}
 
 \setlist[description]{leftmargin=\parindent,labelindent=\parindent}
 
